<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/BotonJugar"
        android:layout_width="196dp"
        android:layout_height="156dp"
        android:onClick="onClickJugar"
        android:text="@string/BotonJugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234" />

    <Button
        android:id="@+id/BotonMostrarInstrucciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMostrarInstrucciones"
        android:text="@string/BotonMostrarInstrucciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonJugar"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/BotonPreferencias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPreferencias"
        android:text="@string/BotonPreferencias"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotonMostrarInstrucciones"
        app:layout_constraintVertical_bias="0.35" />
</androidx.constraintlayout.widget.ConstraintLayout>